# fortis-cli

./: .gitignore  Cargo.toml  README.md
src/: main.rs  utils.rs
src/command/: display_multisig.rs  display_vault.rs  initiate_native_transfer.rs  initiate_program_upgrade.rs  initiate_transfer.rs  mod.rs  multisig_create.rs  proposal_accounts_close.rs  proposal_approve.rs  proposal_create.rs  proposal_execute.rs
